ex01 - zombiehorde looks ok but not sure

--- a/Cpp01/ex01/Makefile
+++ b/Cpp01/ex01/Makefile
@@ -1,6 +1,6 @@
 
 
-SRC_FILES = main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
+SRC_FILES = main.cpp Zombie.cpp zombieHorde.cpp
 
 SRCDIR =
 OBJ_D = objs
