--- a/Cpp04/ex02/Makefile
+++ b/Cpp04/ex02/Makefile
@@ -6,7 +6,7 @@ OBJ_FILES = $(SRC_FILES:%.cpp=$(OBJ_D)/%.o)
 CC = c++
 CFLAGS = -g -Wall -Werror -Wextra -std=c++98
 
-NAME = Set_the_world_on_fire
+NAME = Last_exercice
 RM = rm -rf
 
 DEFCOLOR = \033[0;39m
